# LearnOpenGL

./: CMakeLists.txt  README.md  build.sh  clean.sh
assets/TriangleShader/: TriangleShader.vert
assets/shader/TriangleShader/: TriangleShader.frag  TriangleShader.vert
include/glad/: glad.h
src/: glad.c  main.cpp
src/engine/entity/: Color.cpp  Color.h  Entity.h  Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
src/engine/gpu/: GPUAction.cpp  GPUAction.h  GPUBuffer.cpp  GPUBuffer.h
src/engine/shader/: Shader.cpp  Shader.h
src/shader/: TriangleShader.cpp  TriangleShader.h
